# ebook

./: ARCHITECTURE.md  Cargo.toml  README.md  SPEC.md  TODO.md  mcp-config.json
benches/: format_benchmarks.rs
docs/: MCP.md
examples/: sample.txt  usage.sh
src/: conversion.rs  error.rs  image_optimizer.rs  lib.rs  main.rs  metadata.rs  progress.rs  traits.rs  utils.rs
src/formats/: azw.rs  cbz.rs  epub.rs  fb2.rs  mobi.rs  mod.rs  pdf.rs  txt.rs
src/formats/cbz/: comic_info.rs
src/mcp/: mod.rs  server.rs  types.rs
tests/: azw_tests.rs  cbz_metadata_tests.rs  cli_optimize_tests.rs  cli_tests.rs  conversion_tests.rs  epub3_tests.rs  epub_tests.rs  error_hints_tests.rs  image_optimization_tests.rs  mcp_integration_tests.rs  mobi_tests.rs  pdf_tests.rs  streaming_tests.rs  test_mcp.sh  trait_streaming_tests.rs  txt_tests.rs
