[package]
name = "ebook"
version = "0.1.0"
edition = "2024"
authors = ["Ying Kit WONG"]
description = "A CLI tool for reading, writing, and operating on various ebook formats"

[lib]
name = "ebook_cli"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "2.2"
xml-rs = "0.8"
quick-xml = { version = "0.36", features = ["serialize"] }
pulldown-cmark = "0.12"
lopdf = "0.34"
encoding_rs = "0.8"
regex = "1.11"
walkdir = "2.5"
jsonrepair = "0.1"
tokio = { version = "1.43", features = ["full"] }
async-trait = "0.1"
base64 = "0.22"
rmcp = "0.14"
uuid = { version = "1.11", features = ["v4"] }
indicatif = "0.17"
futures = "0.3"
image = { version = "0.25", features = ["jpeg", "png", "webp"] }
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.13"
assert_fs = "1.1"
predicates = "3.1"
assert_cmd = "2.0"
criterion = "0.5"

[[bench]]
name = "format_benchmarks"
harness = false
